Updated about page text

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -14,10 +14,23 @@
 		<section class="column-first">
 		
 
-		<h2 class="heading-large">About DWP Digital Services</h2>
+		<h2 class="heading-large">About the digital portfolio</h2>
 
 		<p>The digital portfolio belongs to the Department for Work &amp; Pensions (DWP) <a href="https://dwpdigital.blog.gov.uk/">Business Transformation Group (BTG)</a>.
 
+		<h3 class="heading-medium">How to get something added to the portfolio</h3>
+		<ol>
+		<li>Contact the <a href="mailto:JAMES.JOHNSON1@dwp.gsi.gov.uk">portfolio team</a></li>
+		<li>Work with them to define the problem you want to solve</li>		
+		<li>They will help you finalise an Discovery Approval Document</li>
+		<li>This document is then presented to the BTG management team who decide whether the work is added to the backlog and its priority</li>
+		</ol>
+
+		<h3 class="heading-medium">What happens next</h3>
+
+		<p>The BTG Challenge and Support forum will bring your work out of the backlog when the right people become available.</p>
+
+		<!--
 		<h3 class="heading-medium">How do things get onto the digital portfolio?</h3>
 
 		<p>To get a new service on the portfolio contact the digital portfolio lead, <a href="mailto:JAMES.JOHNSON1@dwp.gsi.gov.uk ">James Johnson</a>.</p>
@@ -28,6 +41,7 @@
 			<li>If discovery is approved it's prioritised by the BTG management team and added to the portfolio backlog. Priorities are ratified by the Business Design Authority.</li>
 			<li>The items in the backlog are mobilised in order of priority as soon as they have the right people for the task, as determined by the Challenge and Support Forum.</li>
 		</ol>
+		-->
 		</section>
 
 	</div>
