Added a link to the about page
Needs designing properly

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,7 @@
 		{% if view != 'theme' %}(<a href="/">order by theme</a>){% endif %}
 		{% if view != 'location' %}(<a href="/location/">order by location</a>){% endif %}
 		{% if view != 'priority' %}(<a href="/priority/">order by priority</a>){% endif %}
+		- <a href="/about/">about the digital portfolio</a>
 	</p>
 
 	<div class="grid-row">
