--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,6 @@
 		{% if view != 'theme' %}(<a href="/">order by theme</a>){% endif %}
 		{% if view != 'location' %}(<a href="/location/">order by location</a>){% endif %}
 		{% if view != 'priority' %}(<a href="/priority/">order by priority</a>){% endif %}
-		- <a href="/about/">about the digital portfolio</a>
 	</p>
 
 	<div class="grid-row">
@@ -74,6 +73,8 @@
 		</div>
 
 	{% endfor %}
+
+	<p style="margin-top: 100px">Last updated 9 December 2015. <a href="/about/">About the digital portfolio</a><p>
 
 </main>
 
