--- a/app/views/index.html
+++ b/app/views/index.html
@@ -74,7 +74,7 @@
 
 	{% endfor %}
 
-	<p style="margin-top: 100px">Last updated 9 December 2015. <a href="/about/">About the digital portfolio</a><p>
+	<p style="margin-top: 100px">Last updated 9 December 2015. <a href="/about">About the digital portfolio</a><p>
 
 </main>
 
