Fixing about page formatting

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -10,7 +10,6 @@
 	
 	<p style="margin-top:30px;"><a href="/">Back to all the things we're doing</a></p>
 	
-	<div class="grid-row">
 		<section class="column-first">
 		
 
@@ -19,7 +18,7 @@
 		<p>The digital portfolio belongs to the Department for Work &amp; Pensions (DWP) <a href="https://dwpdigital.blog.gov.uk/">Business Transformation Group (BTG)</a>.
 
 		<h3 class="heading-medium">How to get something added to the portfolio</h3>
-		<ol>
+		<ol class="list list-number">
 		<li>Contact the <a href="mailto:JAMES.JOHNSON1@dwp.gsi.gov.uk">portfolio team</a></li>
 		<li>Work with them to define the problem you want to solve</li>		
 		<li>They will help you finalise an Discovery Approval Document</li>
@@ -29,7 +28,6 @@
 		<h3 class="heading-medium">What happens next</h3>
 
 		<p>The BTG Challenge and Support forum will bring your work out of the backlog when the right people become available.</p>
-		</section>
 
 	</div>
 
