--- a/app/views/project.html
+++ b/app/views/project.html
@@ -53,8 +53,8 @@
 			<h3 class="heading-small">Service Manager</h3>
 			<p>{{ data.service_man | default('Not set') }}</p>
 
-			<h3 class="heading-small">Prototype Link</h3>
-			<p><a href="{{ data.prototype | default('#') }}">{{ data.prototype | default('http://not.set/') }}</a></p>
+			<!--<h3 class="heading-small">Prototype Link</h3>
+			<p><a href="{{ data.prototype | default('#') }}">{{ data.prototype | default('http://not.set/') }}</a></p>-->
 
 			<h3 class="heading-small">Github</h3>
 			<p>The <a href="https://github.com/dwpdigitaltech/dwp-portfolio/blob/master/lib/projects/{{data.filename}}">content for this page</a> is kept on github</p>			
