Title change to 'Digital by Default' Services

--- a/app/views/includes/propositional_navigation_alpha.html
+++ b/app/views/includes/propositional_navigation_alpha.html
@@ -2,7 +2,7 @@
   <div class="content">
     <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
     <nav id="proposition-menu">
-      <a href="/" id="proposition-name">DWP Digital Services</a>
+      <a href="/" id="proposition-name">DWP Digital by Default Services</a>
     </nav>
   </div>
 </div>
