--- a/app/views/project.html
+++ b/app/views/project.html
@@ -12,9 +12,9 @@
 
 	<div class="grid-row">
 		<section class="column-two-thirds">
-			
+
 			<p>{{ data.description }}</p>
-			
+
 			<div class="location">Based in <strong>{{ data.location }}</strong></div>
 
 			<h2 class="heading-medium">Project history</h2>
@@ -25,7 +25,7 @@
 						<h3><a href="#" class="tag tag-history {{phase}}">{{phase}}</a></h3>
 						{% for item in data["phase-history"][phase] %}
 							<p>{{ item.label }} &mdash; {{item.date}}</p>
-						{% endfor %}				
+						{% endfor %}
 					</div>
 					{% endif %}
 				{% endfor %}
@@ -48,14 +48,10 @@
 			<!--<h3 class="heading-small">Prototype Link</h3>
 			<p><a href="{{ data.prototype | default('#') }}">{{ data.prototype | default('http://not.set/') }}</a></p>-->
 
-			<h3 class="heading-small">Github</h3>
-			<p>The <a href="https://github.com/dwpdigitaltech/dwp-portfolio/blob/master/lib/projects/{{data.filename}}">content for this page</a> is kept on github</p>			
+			<hr />
+			<p>The <a href="https://github.com/dwpdigitaltech/dwp-portfolio/blob/master/lib/projects/{{data.filename}}">content for this page</a> is open source.</p>
 		</section>
 	</div>
-	
-
-	
-
 </main>
 
 {% endblock %}
