--- a/app/views/display/index.html
+++ b/app/views/display/index.html
@@ -12,7 +12,7 @@
 	<main id="content" role="main" class="phase-{{ data.phase }}">
 
 		<div class="top-left">DWP Digital By Default</div>
-		<div class="top-right txt-right">Service Manager<br />{{ data.service_man }}</div>
+		<div class="top-right txt-right"><span class="small-caps small">Service Manager</span><br />{{ data.service_man }}</div>
 
 		<div id="display">
 			<p class="theme small-caps">{{ data.theme }}</p>
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="phase-box">
-			<p class="phase">{{ data.phase }}</p>
+			<p class="phase">{{ data.phase_modifier | lower }} {{ data.phase }}</p>
 			<p class="phase-date small-caps">({{msg}} {{ data['phase-history'][phate][0].date }})</p>
 		</div>
 
@@ -37,7 +37,7 @@
 			{% for i in range(0,total) %}
 				{% set class = ""%}
 				{% if i == number %} {% set class = "chosen"%} {% endif %}
-			  <div class="key-block {{ class }}"><a href="/display/{{ i }}/"></a></div>
+			  <div class="key-block {{ class }}"><a href="/display/{{ i }}/{{ location }}"></a></div>
 			{% endfor %}
 		</div>
 
@@ -55,7 +55,7 @@
 		var num = {{ number }};
 	  setTimeout(function()
 		{
-			window.location.href = '/display/'+(num+1)+'/';
+			window.location.href = '/display/'+(num+1)+'/{{ location }}';
 		},time)
 		// $(".timer").animate({"width":"100%"},time,"easeInQuint");
 	});
