--- a/app/views/display/index.html
+++ b/app/views/display/index.html
@@ -1,7 +1,7 @@
 {% extends "display/layout.html" %}
 
 {% block page_title %}
-	Access To Work - Feedback
+	DWP Digital By Default
 {% endblock %}
 
 {% block content %}
