Adding a link to the assessment report (again see Carer's for example).

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -30,7 +30,12 @@
 					<div class="phase-history-item border-{{phase}} txt-{{phase}}">
 						<h3><a href="#" class="tag tag-history {{phase}}">{{phase}}</a></h3>
 						{% for item in data["phase-history"][phase] %}
-							<p>{{ item.label }} &mdash; {{item.date}}</p>
+							<p>
+								{{ item.label }} &mdash; {{item.date}}
+								{% if item.report %}
+									<br />(<a href="{{ item.report }}">assessment report</a>)
+								{% endif %}
+							</p>
 						{% endfor %}
 					</div>
 					{% endif %}
@@ -47,7 +52,7 @@
 
 			{% if data.liveservice %}
 			<br />
-			<p><a href="{{ data.liveservice }}">Apply for Carer’s Allowance</a></p>
+			<p><a href="{{ data.liveservice }}">Live service</a></p>
 			{% endif %}
 			<hr />
 
