Making the video embed responsive for mobile.

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -162,3 +162,17 @@ $backlog-colour: $purple;
     width:20%;
   }
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 51%;
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
