--- a/app/views/project.html
+++ b/app/views/project.html
@@ -18,7 +18,7 @@
 			<div class="location">Based in <strong>{{ data.location }}</strong></div>
 
 			{% if data.video %}
-			<div style="margin-top:30px;">
+			<div style="margin-top:30px;" class="videoWrapper">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/{{ data.video }}" frameborder="0" allowfullscreen></iframe>
 			</div>
 			{% endif %}
