Changed headings from DWP to Defra

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,17 +1,17 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-	DWP Digital Portfolio | About
+	Defra Digital Portfolio | About
 {% endblock %}
 
 {% block content %}
 
 <main id="content" role="main">
-	
+
 	<p style="margin-top:30px;"><a href="/">Back to all the things we're doing</a></p>
-	
+
 		<section class="column-first">
-		
+
 
 		<h2 class="heading-large">About the digital portfolio</h2>
 
@@ -20,7 +20,7 @@
 		<h3 class="heading-medium">How to get something added to the portfolio</h3>
 		<ol class="list list-number">
 		<li>Contact the <a href="mailto:JAMES.JOHNSON1@dwp.gsi.gov.uk">portfolio team</a></li>
-		<li>Work with them to define the problem you want to solve</li>		
+		<li>Work with them to define the problem you want to solve</li>
 		<li>They will help you finalise an Discovery Approval Document</li>
 		<li>This document is then presented to the BTG management team who decide whether the work is added to the backlog and its priority</li>
 		</ol>
