--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -2,6 +2,6 @@
 
 {% block head %} {% include "includes/head.html" %} {% endblock %}
 
-{% set global_header_text = "DWP Digital by Default Services" %}
+{% set global_header_text = "Defra Digital by Default Services" %}
 
 {% block bodyEnd %} bodyEnd {% endblock %}
