--- a/app/views/about.html
+++ b/app/views/about.html
@@ -15,20 +15,12 @@
 
 		<h2 class="heading-large">About the digital portfolio</h2>
 
-		<p>The digital portfolio belongs to the Department for Work &amp; Pensions (DWP) <a href="https://dwpdigital.blog.gov.uk/">Business Transformation Group (BTG)</a>.
+		<p>The digital portfolio belongs to the Department for Environment, Food &amp; Rural Affairs (DEFRA).
 
 		<h3 class="heading-medium">How to get something added to the portfolio</h3>
 		<ol class="list list-number">
-		<li>Contact the <a href="mailto:JAMES.JOHNSON1@dwp.gsi.gov.uk">portfolio team</a></li>
-		<li>Work with them to define the problem you want to solve</li>
-		<li>They will help you finalise an Discovery Approval Document</li>
-		<li>This document is then presented to the BTG management team who decide whether the work is added to the backlog and its priority</li>
+			<li>Contact <a href="mailto:colin.banno-thornton@environment-agency.gov.uk">Colin Banno-Thornton</a></li>
 		</ol>
-
-		<h3 class="heading-medium">What happens next</h3>
-
-		<p>The BTG Challenge and Support forum will bring your work out of the backlog when the right people become available.</p>
-
 	</div>
 
 </main>
