--- a/app/views/project.html
+++ b/app/views/project.html
@@ -19,7 +19,7 @@
 
 			{% if data.video %}
 			<div style="margin-top:30px;" class="videoWrapper">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/{{ data.video }}" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="{{ data.video }}" frameborder="0" allowfullscreen></iframe>
 			</div>
 			{% endif %}
 
