--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -12,9 +12,7 @@
 
 }
 
-/*
-  Little tag in header.
-*/
+/* Little tag in header. */
 .alpha-tag {
   background-color:$alpha-colour;
   color:white;
@@ -175,4 +173,33 @@ $backlog-colour: $purple;
 	left: 0;
 	width: 100%;
 	height: 100%;
+}
+
+/* OTHER PROJECTS STUFF */
+.heading-xxlarge {
+  @extend .bold-xxlarge;
+  margin-top:30px;
+}
+.other-project {
+  margin-top:-1px;
+  border-top:1px solid $grey-3;
+  padding-top:15px;
+  border-bottom:1px solid $grey-3;
+  padding-bottom:15px;
+}
+.project-name {
+  margin-top:10px;
+}
+.project-team {
+  border-left:5px solid $turquoise;
+  padding-left:10px;
+  margin-top:45px;
+  padding-top:5px;
+  li {margin-bottom:5px;}
+}
+.project-links {
+  vertical-align: bottom;
+}
+.category-heading {
+  margin:45px 0 30px;
 }
