Fix to broken code

--- a/app/views/other.html
+++ b/app/views/other.html
@@ -217,7 +217,7 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Dean Timmons/li>
+				<li><span class="bold-small">Responsible</span>: Dean Timmons</li>
 				<!--<li><span class="bold-small">Design lead</span>: Phil Swan</li>
 				<li><span class="bold-small">Content lead</span>: Tom Adams</li>-->
 			</ul>
