--- a/app/views/other.html
+++ b/app/views/other.html
@@ -50,9 +50,8 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Malcolm Vengerbus</li>
-				<li><span class="bold-small">Design lead</span>: Jenny Domino</li>
-				<li><span class="bold-small">Content lead</span>: Vera Gambol</li>
+				<li><span class="bold-small">Responsible</span>: TBC</li>
+				<li><span class="bold-small">Content lead(s)</span>: Tom Adams &amp; Mel Cannon</li>
 			</ul>
 		</section>
 	</div>
@@ -94,7 +93,7 @@
 		<section class="column-two-thirds">
 			<h3 class="project-name heading-medium">Design Repository</h3>
 			<p>Artwork for Digital DWP mssion patches, stickers, and posters.</p>
-			<p><a href="http://dwp-patches.herokuapp.com/" class="button">View</a></p>
+			<p><a href="http://design-repository.herokuapp.com " class="button">View</a></p>
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
