Adding link to policy tracker prototype

--- a/app/views/other.html
+++ b/app/views/other.html
@@ -154,8 +154,8 @@
 	<div class="other-project grid-row">
 		<section class="column-two-thirds">
 			<h3 class="project-name heading-medium">Policy Portfolio</h3>
-			<!--<p>Artwork for Digital DWP mssion patches, stickers, and posters.</p>-->
-			<!--<p><a href="#" class="button">View</a></p>-->
+			<!--<p></p>-->
+			<p><a href="https://dwp-policy-tracker.herokuapp.com/versions/design-sprint/version-01/app/index" class="button">View</a></p>
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
