--- a/app/views/other.html
+++ b/app/views/other.html
@@ -20,9 +20,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Pearl Cox</li>
-				<li><span class="bold-small">Design lead</span>: Charles Reynolds-Talbot</li>
-				<li><span class="bold-small">Content lead</span>: Tom Adams</li>
+				<li><span class="bold-xsmall">Responsible</span>: Pearl Cox</li>
+				<li><span class="bold-xsmall">Design lead</span>: Charles Reynolds-Talbot</li>
+				<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>
 			</ul>
 		</section>
 	</div>
@@ -35,9 +35,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Dean Timmons</li>
-				<li><span class="bold-small">Design lead</span>: Charles Reynolds-Talbot</li>
-				<!--<li><span class="bold-small">Content lead</span>: Tom Adams</li>-->
+				<li><span class="bold-xsmall">Responsible</span>: Dean Timmons</li>
+				<li><span class="bold-xsmall">Design lead</span>: Charles Reynolds-Talbot</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>-->
 			</ul>
 		</section>
 	</div>
@@ -50,8 +50,8 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: TBC</li>
-				<li><span class="bold-small">Content lead(s)</span>: Tom Adams &amp; Mel Cannon</li>
+				<li><span class="bold-xsmall">Responsible</span>: TBC</li>
+				<li><span class="bold-xsmall">Content lead(s)</span>: Tom Adams &amp; Mel Cannon</li>
 			</ul>
 		</section>
 	</div>
@@ -66,9 +66,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Peter Nuckley</li>
-				<!--<li><span class="bold-small">Design lead</span>: Jenny Domino</li>
-				<li><span class="bold-small">Content lead</span>: Vera Gambol</li-->
+				<li><span class="bold-xsmall">Responsible</span>: Peter Nuckley</li>
+				<!--<li><span class="bold-xsmall">Design lead</span>: Jenny Domino</li>
+				<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
 	</div>	
@@ -80,9 +80,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Annette Sweeney</li>
-				<!--<li><span class="bold-small">Design lead</span>: Jenny Domino</li>
-				<li><span class="bold-small">Content lead</span>: Vera Gambol</li-->
+				<li><span class="bold-xsmall">Responsible</span>: Annette Sweeney</li>
+				<!--<li><span class="bold-xsmall">Design lead</span>: Jenny Domino</li>
+				<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
 	</div>
@@ -97,9 +97,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Gavin Elliott</li>
-				<li><span class="bold-small">Design lead</span>: Craig Abbott</li>
-				<!--<li><span class="bold-small">Content lead</span>: Vera Gambol</li-->
+				<li><span class="bold-xsmall">Responsible</span>: Gavin Elliott</li>
+				<li><span class="bold-xsmall">Design lead</span>: Craig Abbott</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
 	</div>
@@ -112,9 +112,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Ben Holliday</li>
-				<li><span class="bold-small">Design lead</span>: Eddie Shannon</li>
-				<!--<li><span class="bold-small">Content lead</span>: Vera Gambol</li-->
+				<li><span class="bold-xsmall">Responsible</span>: Ben Holliday</li>
+				<li><span class="bold-xsmall">Design lead</span>: Eddie Shannon</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
 	</div>
@@ -127,9 +127,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Ben Holliday</li>
-				<li><span class="bold-small">Design lead</span>: Eddie Shannon</li>
-				<!--<li><span class="bold-small">Content lead</span>: Vera Gambol</li-->
+				<li><span class="bold-xsmall">Responsible</span>: Ben Holliday</li>
+				<li><span class="bold-xsmall">Design lead</span>: Eddie Shannon</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
 	</div>
@@ -142,9 +142,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: James Johnson</li>
-				<li><span class="bold-small">Design lead</span>: Tom Morgan</li>
-				<li><span class="bold-small">Content lead</span>: Tom Adams</li>
+				<li><span class="bold-xsmall">Responsible</span>: James Johnson</li>
+				<li><span class="bold-xsmall">Design lead</span>: Tom Morgan</li>
+				<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>
 			</ul>
 		</section>
 	</div>	
@@ -159,9 +159,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Lorraine Hennesey</li>
-				<li><span class="bold-small">Design lead(s)</span>: Tom Morgan, Maxine Divers</li>
-				<!--<li><span class="bold-small">Content lead</span>: Vera Gambol</li-->
+				<li><span class="bold-xsmall">Responsible</span>: Lorraine Hennesey</li>
+				<li><span class="bold-xsmall">Design lead(s)</span>: Tom Morgan, Maxine Divers</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
 	</div>
@@ -184,9 +184,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Rachel Bailey</li>
-				<li><span class="bold-small">Design lead</span>: Phil Swan</li>
-				<li><span class="bold-small">Content lead</span>: Tom Adams</li>
+				<li><span class="bold-xsmall">Responsible</span>: Rachel Bailey</li>
+				<li><span class="bold-xsmall">Design lead</span>: Phil Swan</li>
+				<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>
 			</ul>
 		</section>
 	</div>
@@ -199,9 +199,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: TBC</li>
-				<li><span class="bold-small">Design lead</span>: Gavin Elliott</li>
-				<!--<li><span class="bold-small">Content lead</span>: Tom Adams</li>-->
+				<li><span class="bold-xsmall">Responsible</span>: TBC</li>
+				<li><span class="bold-xsmall">Design lead</span>: Gavin Elliott</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>-->
 			</ul>
 		</section>
 	</div>
@@ -216,9 +216,9 @@
 		</section>
 		<section class="column-third">
 			<ul class="project-team">
-				<li><span class="bold-small">Responsible</span>: Dean Timmons</li>
-				<!--<li><span class="bold-small">Design lead</span>: Phil Swan</li>
-				<li><span class="bold-small">Content lead</span>: Tom Adams</li>-->
+				<li><span class="bold-xsmall">Responsible</span>: Dean Timmons</li>
+				<!--<li><span class="bold-xsmall">Design lead</span>: Phil Swan</li>
+				<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>-->
 			</ul>
 		</section>
 	</div>
