--- a/app/views/other.html
+++ b/app/views/other.html
@@ -52,6 +52,7 @@
 			<ul class="project-team">
 				<li><span class="bold-xsmall">Responsible</span>: TBC</li>
 				<li><span class="bold-xsmall">Content lead(s)</span>: Tom Adams &amp; Mel Cannon</li>
+				<li><span class="bold-xsmall">Design lead</span>: Tom Morgan</li>
 			</ul>
 		</section>
 	</div>
