--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,7 +1,23 @@
 {% extends "govuk_template.html" %}
 
+{% block page_title %}
+	DWP Digital by Default Services
+{% endblock %}
+
 {% block head %} {% include "includes/head.html" %} {% endblock %}
 
 {% set global_header_text = "DWP Digital by Default Services" %}
 
-{% block bodyEnd %} bodyEnd {% endblock %}
+{% block body_end %}
+{# {% include "includes/scripts.html" %} #}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80269351-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+{% endblock %}
