--- a/app/views/other.html
+++ b/app/views/other.html
@@ -23,7 +23,7 @@
 		</section>
 	</div>
 
-	<div class="other-project grid-row">
+	<!--<div class="other-project grid-row">
 		<section class="column-two-thirds">
 			<h3 class="project-name heading-medium">Digital DWP Events</h3>
 			<p></p>
@@ -32,11 +32,11 @@
 		<section class="column-third">
 			<ul class="project-team">
 				<li><span class="bold-xsmall">Responsible</span>: Dean Timmons</li>
-				<li><span class="bold-xsmall">Design lead</span>: Charles Reynolds-Talbot</li>
-				<!--<li><span class="bold-xsmall">Content lead</span>: Tom Adams</li>-->
+				<li><span class="bold-xsmall">Design lead</span>: TBC/li>
+				<li><span class="bold-xsmall">Content lead</span>: TBC</li>
 			</ul>
 		</section>
-	</div>
+	</div>-->
 	
 	<div class="other-project grid-row">
 		<section class="column-two-thirds">
@@ -158,6 +158,21 @@
 			<ul class="project-team">
 				<li><span class="bold-xsmall">Responsible</span>: Lorraine Hennesey</li>
 				<li><span class="bold-xsmall">Design lead(s)</span>: Tom Morgan, Maxine Divers</li>
+				<!--<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
+			</ul>
+		</section>
+	</div>
+
+	<div class="other-project grid-row">
+		<section class="column-two-thirds">
+			<h3 class="project-name heading-medium">Provide a Fit Note</h3>
+			<!--<p></p>-->
+			<p><a href="https://dwp-designsprint.herokuapp.com/versions/design-sprint/version-01/index" class="button">View</a></p>
+		</section>
+		<section class="column-third">
+			<ul class="project-team">
+				<li><span class="bold-xsmall">Responsible</span>: Michael Tattersall</li>
+				<li><span class="bold-xsmall">Design lead</span>: Charles Reynolds-Talbot</li>
 				<!--<li><span class="bold-xsmall">Content lead</span>: Vera Gambol</li-->
 			</ul>
 		</section>
