Adds Local Payment team details

--- a/app/views/other.html
+++ b/app/views/other.html
@@ -234,6 +234,19 @@
 			</ul>
 		</section>
 	</div>
+	
+	<div class="other-project grid-row">
+		<section class="column-two-thirds">
+			<h3 class="project-name heading-medium">CPSe Local Payment</h3>
+			<p>Finance, Commercials and HR team based in Stockport.</p>
+			<!--<p><a href="#" class="button">View</a></p>-->
+		</section>
+		<section class="column-third">
+			<ul class="project-team">
+				<li><span class="bold-xsmall">Responsible</span>: Mike Green</li>
+			</ul>
+		</section>
+	</div>
 
 </main>
 
