Contact reference changed

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -15,7 +15,7 @@
 
 		<h3 class="heading-medium">How to get something added to the portfolio</h3>
 		<ol class="list list-number">
-		<li>Contact the <a href="mailto:JAMES.JOHNSON1@dwp.gsi.gov.uk">portfolio team</a></li>
+		<li>Contact the <a href="mailto:MARK.HATTON@dwp.gsi.gov.uk">portfolio team</a></li>
 		<li>Work with them to define the problem you want to solve</li>		
 		<li>They will help you finalise an Discovery Approval Document</li>
 		<li>This document is then presented to the BTG management team who decide whether the work is added to the backlog and its priority</li>
