& changed to and

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -11,7 +11,7 @@
 
 		<h2 class="heading-large">About the digital portfolio</h2>
 
-		<p>The digital portfolio belongs to the Department for Work andamp; Pensions (DWP) <a href="https://dwpdigital.blog.gov.uk/">Business Transformation Group (BTG)</a>.
+		<p>The digital portfolio belongs to the Department for Work and Pensions (DWP) <a href="https://dwpdigital.blog.gov.uk/">Business Transformation Group (BTG)</a>.
 
 		<h3 class="heading-medium">How to get something added to the portfolio</h3>
 		<ol class="list list-number">
