--- a/app/views/showntells.html
+++ b/app/views/showntells.html
@@ -8,45 +8,52 @@
 	
 	{{ showntells | log }}
 	
-	{% if today %}
-		<h2 class="heading-large">Today
-			{% if loc %}in {{ loc }}{% endif %}
-		</h2>
-	{% endif %}
-	
-	{% if all %}
-		<h2 class="heading-large">All
-			{% if loc %}in {{ loc }}{% endif %}
-		</h2>
-	{% endif %}
-	
-	{% if showntells.length %}
-	<table>
-		<thead>
-			<tr><th>Date</th><th>Project</th>{% if not loc %}<th>Location</th>{% endif %}</tr>
-		</thead>
-		<tbody>
-		{% for item in showntells %}
-		  <tr class="standup">
-				{% if today %}
-					<td>{{ item.date | formatDate("h:mma") }}</td>
-				{% else %}
-					<td>{{ item.date | formatDate("h:mma dddd - Do MMMM YYYY") }}</td>
-				{% endif %}
-				{# <td><a href="">{{ item.name }}</a></td> #}
-				<td><a href="/projects/{{ item.id }}/{{ item.name | slugify }}">{{ item.name }}</a></td>
-				{% if not loc %}
-					<td><a href="/showntells/all/{{ item.location }}">{{ item.location }}</a></td>
-				{% endif %}
-			</tr>
-		{% endfor %}
-		</tbody>
-	</table>
-	{% else %}
-	<p>There are no show &lsquo;n&rsquo; tells {% if today %}
-			today {% if loc %}in {{ loc }}{% endif %}
-		{% endif %}</p>
-	{% endif %}
+	<div class="grid-row">
+		<div class="column-two-thirds">
+			{% if today %}
+				<h2 class="heading-large">Today
+					{% if loc %}in {{ loc }}{% endif %}
+				</h2>
+			{% endif %}
+			
+			{% if all %}
+				<h2 class="heading-large">All
+					{% if loc %}in {{ loc }}{% endif %}
+				</h2>
+			{% endif %}
+			
+			{% if showntells.length %}
+			<table>
+				<thead>
+					<tr><th>Date</th><th>Project</th>{% if not loc %}<th>Location</th>{% endif %}</tr>
+				</thead>
+				<tbody>
+				{% for item in showntells %}
+					<tr class="standup">
+						{% if today %}
+							<td>{{ item.date | formatDate("h:mma") }}</td>
+						{% else %}
+							<td>{{ item.date | formatDate("h:mma dddd - Do MMMM YYYY") }}</td>
+						{% endif %}
+						{# <td><a href="">{{ item.name }}</a></td> #}
+						<td><a href="/projects/{{ item.id }}/{{ item.name | slugify }}">{{ item.name }}</a></td>
+						{% if not loc %}
+							<td><a href="/showntells/all/{{ item.location }}">{{ item.location }}</a></td>
+						{% endif %}
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+			{% else %}
+			<p>There are no show &lsquo;n&rsquo; tells {% if today %}
+					today {% if loc %}in {{ loc }}{% endif %}
+				{% endif %}</p>
+			{% endif %}
+		</div><!-- column -->
+		<div class="column-third">
+		  
+		</div><!-- column -->
+	</div><!-- row -->
 
 </main>
 
