--- a/app/views/about.html
+++ b/app/views/about.html
@@ -10,7 +10,9 @@
 
 		<h2 class="heading-large">About the digital portfolio</h2>
 
-		<p>The digital portfolio belongs to the Department for Work and Pensions (DWP) 
+		<p>The portfolio is part of Digital Group within the Department for Work and Pensions (DWP)
+
+ 
 
 		
 	</div>
