--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -22,7 +22,7 @@
   padding:2px 8px 0;
   margin-left:0.25em;
 }
-#global-header-bar {background-color:$turquoise;}
+#global-header-bar {background-color:$govuk-blue;}
 @media (min-width: 769px) {
   #global-header .header-wrapper .header-global .header-logo {width:100%;}
 }
