--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,12 +1,12 @@
 {% extends "govuk_template.html" %}
 
 {% block page_title %}
-	DWP Digital by Default Services
+	DVSA Services
 {% endblock %}
 
 {% block head %} {% include "includes/head.html" %} {% endblock %}
 
-{% set global_header_text = "DWP Digital by Default Services" %}
+{% set global_header_text = "DVSA Services" %}
 
 {% block body_end %}
 {# {% include "includes/scripts.html" %} #}
