removing DWP references

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-	DWP Digital Portfolio
+	DVSA Digital Portfolio
 {% endblock %}
 
 {% block content %}
