--- a/app/views/about.html
+++ b/app/views/about.html
@@ -6,16 +6,13 @@
 
 	<p style="margin-top:30px;"><a href="/">Back to all the things we're doing</a></p>
 
-		<section class="column-first">
+	<section class="column-first">
 
 		<h2 class="heading-large">About the digital portfolio</h2>
 
-		<p>The portfolio is part of Digital Group within the Department for Work and Pensions (DWP)
+		<p>The portfolio is part of the Driver and Vehicle Standards Agency (DVSA)</p>
 
- 
-
-		
-	</div>
+	</section>
 
 </main>
 
