--- a/app/views/display/index.html
+++ b/app/views/display/index.html
@@ -11,7 +11,7 @@
 
 	<main id="content" role="main" class="phase-{{ data.phase }}">
 
-		<div class="top-left">DWP Digital By Default</div>
+		<div class="top-left">DVSA Digital By Default</div>
 		<div class="top-right txt-right"><span class="small-caps small">Service Manager</span><br />{{ data.service_man }}</div>
 
 		<div id="display">
