Changed 'Service Manager' to 'Product Owner'

--- a/app/views/project.html
+++ b/app/views/project.html
@@ -68,7 +68,7 @@
 			<h3 class="heading-small">Senior Responsible Officer</h3>
 			<p>{{ data.sro | default('Not set') }}</p>
 
-			<h3 class="heading-small">Service Manager</h3>
+			<h3 class="heading-small">Product Owner</h3>
 			<p>{{ data.service_man | default('Not set') }}</p>
 			
 			<hr />
