--- a/app/views/project.html
+++ b/app/views/project.html
@@ -71,6 +71,11 @@
 			<h3 class="heading-small">Product Owner</h3>
 			<p>{{ data.service_man | default('Not set') }}</p>
             
+            {% if data.del_mgr %}	
+			<h3 class="heading-small">Delivery Manager</h3>
+			<p>{{ data.del_mgr | default('Not set') }}</p>
+            {% endif %}
+            
             {% if data.user_rsch %}	
 			<h3 class="heading-small">User Researcher</h3>
 			<p>{{ data.user_rsch | default('Not set') }}</p>
